--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "AppWorks",
+  "name": "site",
   "version": "1.0.0",
   "scripts": {
     "start": "dumi dev",
@@ -26,7 +26,6 @@
   "devDependencies": {
     "@umijs/test": "^3.0.5",
     "dumi": "^1.1.0",
-    "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "yorkie": "^2.0.0"
