--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,17 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/npm-debug.log*
-/yarn-error.log
-/yarn.lock
-/package-lock.json
-
-# production
-/dist
-/docs-dist
-
-# misc
+.vscode
 .DS_Store
+.idea/
+.temp/
+.eslintcache
 
-# umi
-.umi
-.umi-production
-.umi-test
-.env.local
+build/
+dist/
+lib/
+coverage/
+node_modules/
+
+template.yml
+
+package-lock.json
+yarn.lock
+ No newline at end of file
