--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "AppWorks Homepage",
   "scripts": {
     "prepare": "husky install",
-    "prettier": "prettier --write \"**/*.{js,ts,md,json}\"",
+    "prettier": "prettier --write \"**/*.{js,vue,md,json}\"",
     "start": "vuepress dev docs",
     "build": "vuepress build docs"
   },
