--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "AppWorks",
   "version": "1.0.0",
-  "description": "AppWorks Homepage",
+  "description": "AppWorks Site",
   "scripts": {
     "prepare": "husky install",
     "prettier": "prettier --write \"**/*.{js,vue,md,json}\"",
