--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "glob": "^7.1.6",
     "gray-matter": "^4.0.2",
     "markdown-it-multimd-table": "^4.0.3",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^10.2.0",
     "vuepress": "^1.8.2"
   },
   "devDependencies": {
