--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@iceworks/spec": "^1.3.2",
+    "@vuepress/plugin-google-analytics": "^1.8.2",
     "husky": "^6.0.0",
     "node-sass": "^6.0.0",
     "prettier": "^2.3.0",
